--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hook-form": "^7.40.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.5",
+    "react-spinners": "^0.13.7",
     "react-toastify": "^9.1.1",
     "styled-components": "^5.3.6",
     "yup": "^0.32.11"
