--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_API_BASE_URL=http://localhost:7542/2.0/
+VITE_API_BASE_URL=http://localhost:7542/2.0
 VITE_API_PROD_URL=https://neko-back.herokuapp.com/2.0
