--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
     "lint:ts:fix": "eslint \"**/*.{ts,tsx}\" --fix"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.7",
     "@hookform/resolvers": "^2.9.10",
     "@reduxjs/toolkit": "^1.9.1",
+    "@tanstack/react-table": "^8.7.3",
+    "lodash-es": "^4.17.21",
+    "rc-slider": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.40.0",
+    "react-paginate": "^8.1.4",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.5",
     "react-spinners": "^0.13.7",
@@ -24,8 +29,10 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/lodash-es": "^4.17.6",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@types/react-paginate": "^7.1.1",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
