--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^2.9.10",
     "@reduxjs/toolkit": "^1.9.1",
     "@tanstack/react-table": "^8.7.3",
+    "axios": "^1.2.1",
     "lodash-es": "^4.17.21",
     "rc-slider": "^10.1.0",
     "react": "^18.2.0",
